--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@supabase/supabase-js": "^2.48.1",
     "@vercel/postgres": "^0.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.447.0",
-    "next": "15.0.4",
+    "next": "^15.1.7",
     "pocketbase": "^0.21.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
