--- a/package.json
+++ b/package.json
@@ -9,36 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "^2.48.1",
-    "@vercel/postgres": "^0.10.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.447.0",
-    "next": "^15.1.7",
-    "pocketbase": "^0.21.3",
+    "@radix-ui/react-avatar": "1.1.3",
+    "@radix-ui/react-dropdown-menu": "2.1.6",
+    "@radix-ui/react-icons": "1.3.2",
+    "@radix-ui/react-label": "2.1.2",
+    "@radix-ui/react-slot": "1.1.2",
+    "@supabase/ssr": "0.5.2",
+    "@supabase/supabase-js": "2.49.1",
+    "@tailwindcss/postcss": "^4.0.14",
+    "@vercel/postgres": "0.10.0",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "lucide-react": "0.479.0",
+    "next": "15.2.2",
+    "pocketbase": "0.25.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "3.0.2",
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
-    "@types/node": "20.14.8",
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.13",
-    "typescript": "5.5.2"
-  },
-  "overrides": {
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.1"
+    "@types/node": "22.13.10",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
+    "eslint": "9.22.0",
+    "eslint-config-next": "15.2.2",
+    "postcss": "^8.5.3",
+    "supabase": "^2.19.7",
+    "tailwindcss": "^4.0.14",
+    "typescript": "5.8.2"
   }
 }
